# docpatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-SERVER  README.md  changed.md  contextidea.md  integrations.md  pyproject.toml  visualize_tree.py
.github/workflows/: ci.yml
docs/: index.html  integrations.html
src/docpatch/: __init__.py  config.py
src/docpatch/cli/: __init__.py  edit.py  main.py
src/docpatch/core/: __init__.py  errors.py  fingerprint.py  ids.py  node.py  tree.py  types.py
src/docpatch/locator/: __init__.py  base.py  composite.py  semantic.py  symbolic.py
src/docpatch/models/: __init__.py  anthropic.py  azure_inference.py  azure_openai.py  base.py  mock.py  openai.py
src/docpatch/parsers/: __init__.py  json_parser.py  markdown.py
src/docpatch/patcher/: __init__.py  base.py  replace.py
src/docpatch/patcher/prompts/: replace.j2
src/docpatch/splicer/: __init__.py  splice.py  validate.py
src/docpatch/storage/: __init__.py  base.py  in_memory.py  sidecar.py
tests/fixtures/json/: simple.json
tests/fixtures/markdown/: simple.md
tests/integration/: test_end_to_end.py
tests/property/: test_json_roundtrip.py  test_markdown_roundtrip.py  test_splice_identity.py
tests/unit/: test_errors.py  test_fingerprint.py  test_ids.py  test_json_parser.py  test_locator.py  test_locator_extended.py  test_markdown_parser.py  test_node.py  test_patcher.py  test_splicer.py  test_storage.py  test_token_savings.py  test_tree.py  test_tree_extended.py
