[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpatch"
version = "0.1.0"
description = "Format-agnostic document editing for LLM agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "markdown-it-py>=3.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "blake3>=0.4",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.28"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.103",
    "mypy>=1.10",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "types-jinja2",
]

[project.scripts]
docpatch = "docpatch.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/docpatch"]

[tool.hatch.build.targets.editable]
path = "src"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["docpatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/docpatch"]
omit = ["src/docpatch/server/*"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
